--- a/index-practice.html
+++ b/index-practice.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/stylesheets/css/site.css">
+    
 </head>
 <body>
     <div id="site-container">
@@ -108,12 +109,18 @@
         </section>
         <section class="section">
             <div class="wrapper">
-                <div class="roadmap">
-                        <svg class="roadmap__svg" xmlns="http://www.w3.org/2000/svg">
-                            <path el="road-path" stroke="#828282" stroke-dasharray="32 5" stroke-width="8" d="M 30 30 H 50 V 50 H 30 Z"  id="roadline" fill="transparent"  stroke="black" />
+                <div el="scroll-trigger" class="roadmap">
+                        <svg  class="roadmap__svg" xmlns="http://www.w3.org/2000/svg">
+                            <defs>
+                                <path   id="roadline"
+                                        el="road-path" 
+                                        fill="transparent" />
+                            </defs>
+                            <use class="roadmap__roadpath" href="#roadline" />
+                            <use class="roadmap__dash" href="#roadline" />
                         </svg>
                         <div class="roadmap-el">
-                            <div class="roadmap-el__grid">
+                            <div class="roadmap-el__grid roadmap-el__grid--switch">
                                 <div class="roadmap-el__left">
                                     <h3 class="roadmap-el__title">Browse available staff in your area</h3>
                                     <p class="roadmap-el__description">
@@ -139,7 +146,7 @@
                             </div>
                         </div>
                         <div class="roadmap-el">
-                            <div class="roadmap-el__grid">
+                            <div class="roadmap-el__grid  roadmap-el__grid--switch">
                                 <div class="roadmap-el__left">
                                     <h3 class="roadmap-el__title">Join the network and post your shifts</h3>
                                     <p class="roadmap-el__description">
@@ -205,6 +212,7 @@
         </footer>
     </div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.8/ScrollMagic.min.js"></script>
     <script src="assets/js/helpers/site.js"></script>
 </body>
 </html>
